feat: add api-doc for /api/home/payment-info
