# api/app/Http/Controllers/HomeController.php
@@ -18,6 +18,30 @@ class HomeController extends Controller
      * Get the payment information of the authenticated user.
      *
      * @return \Illuminate\Http\JsonResponse
+     *
+     * @OA\Get(
+     *     path="/api/home/payment-info",
+     *     summary="Get payment information of the authenticated user",
+     *     tags={"Home"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *             allOf={
+     *                 @OA\Schema(
+     *                     @OA\Property(
+     *                         property="arrears",
+     *                         type="number",
+     *                     ),
+     *                     @OA\Property(
+     *                         property="balance",
+     *                         type="number",
+     *                     ),
+     *                 ),
+     *             },
+     *         )
+     *     ),
+     * )
      */
     public function getPaymentInfo()
     {
